--- a/programas/Makefile
+++ b/programas/Makefile
@@ -1,2 +1,8 @@
 02-sinusoidal.png: 02-sinusoidal.py
 	python3 02-sinusoidal.py
+
+02-cosinusoidal.png: 02-cosinusoidal.py
+	python3 02-cosinusoidal.py
+
+02-seno-y-coseno.png: 02-seno-y-coseno.py
+	python3 02-seno-y-coseno.py
